# cvpr-2022-matching

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cvpr.code-workspace  experiments.md  readme.md
core/: CMakeLists.txt  core.cpp  core.h  cvpr.cpp
data/test/Annex/: 22_Annex_01_f01_3dmodel.dxf  22_Annex_01_f01_3dmodel.pcp
data/test/Facility/: 24_Facility_04_f01_3dmodel.dxf
data/users/Annex/: 22_Annex_01_F1_s0p01m.dxf  22_Annex_01_F1_s0p01m.ifc  22_Annex_01_F1_s0p01m.mtl
data/users/Facility/: 24_Facility_04_F1_s0p01m.dxf  24_Facility_04_F1_s0p01m.ifc  (+1 more)
dependencies/matching_code/: file_list_test.txt  file_list_validation.txt  filelist_test.txt  filelist_validation.txt  json_to_csv.py  jsonfile.py  lazfile.py  matching_single_v2.py  matching_v2.py  test_transform_final.py  test_transform_rigid.py  transformation_rigid_test.csv  transformation_rigid_test_final.csv  transformation_rigid_validation.csv  transformation_rigid_validation_final.csv  update_json_with_transform.py
python/: RigidRegistration.py  calculations.py  config.py  endpoints.py  fake_gt_gen.py  iou.py  loader copy 2.py  loader copy.py  loader.py  logging.yaml  main.py  match.json  matching.py  requirements.txt  result.py  ui.py  utils.py  vertices.py
python/calculations/: iou.py
python/gui/: landing.py  loader.py  sidebar.py  viewer.py
python/profiling/: readable__match_old.prof
python/utils/: __init__.py  logger.py  view.py
src/: config.py  loader.py  logging.yaml  main.py  matching.py  test.py
src/calculations/: iou.py
src/utils/: view.py
